# jay-i-skills

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  REQUIREMENTS.md  STATE.md  soup-feast-app-design.md  soup-feast-process-flow.md
.claude/: SKILL-CATALOG.md
.claude/commands/: repo-brief.md  writing-triage.md
.claude/frameworks/dependency-mapping/: FRAMEWORK.md
.claude/frameworks/discovery/: FRAMEWORK.md
.claude/frameworks/execution/: FRAMEWORK.md
.claude/knowledge/: behaviors-mindsets.md  copilot-prompts.md  i2i-lookup-prompts.md  overlap-dependency-mapping-prompt.md  principles.md  product-standards-adoption.md  product-standards-applicability-lifecycle.md  product-standards-applicability-pillar.md  product-standards-applicability.md  product-standards-dependencies-adoption.md  product-standards-dependencies-reference.md  product-standards-repo-map.md  product-standards.md  references.md  sdlc-lookup-prompts.md  spm-lookup-prompts.md  vocabulary.md
.claude/private-template/: .gitignore  CLAUDE.md  README.md  VETTING-PROMPTS.md
.claude/skills/: codex-review.md  repo-init.md  writing-triage.md
.claude/templates/: AGENTS-TEMPLATE.md  CONTEXT-TEMPLATE.md  PHASE-TEMPLATE.md  PLAN-TEMPLATE.md  SCORECARD-TEMPLATE.md  SUMMARY-TEMPLATE.md
projects/feed/: .gitignore  CLAUDE.md  config.example.yaml  pyproject.toml
projects/feed/src/feed/: __init__.py  __main__.py  config.py  delivery.py  fetcher.py  gmail.py  magazine.py  parser.py  pipeline.py  state.py
projects/feed/templates/: magazine.html
(+31 files in other folders)
